# dazelisk

./: .gitignore  DESIGN.md  LICENSE  README.md  pre_push.sh  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
image/: .bazelrc  BUILD.bazel  MODULE.bazel  packages.lock.json  packages.yaml
image/tests/: structure.yaml
scripts/: sync_image_digest.py
src/dazelisk/: __init__.py  __main__.py  cli.py  container.py  customization.py  default_image.json  docker.py  gpu.py  naming.py  user_mapping.py  utils.py  volume.py  workspace.py
tests/: conftest.py  test_cli.py  test_container.py  test_customization.py  test_docker.py  test_gpu.py  test_naming.py  test_user_mapping.py  test_utils.py  test_volume.py  test_workspace.py
