[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dazelisk"
version = "0.1.1"
description = "Containerized bazelisk wrapper: run bazelisk transparently inside a Docker container"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Martino Pilia", email = "martino.pilia@proton.me" }]
keywords = ["bazel", "bazelisk", "docker", "container"]
dependencies = []

[project.scripts]
dazelisk = "dazelisk.cli:run"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "ruff", "ty"]

[tool.hatch.build.targets.wheel]
packages = ["src/dazelisk"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
]
# Line length / formatting is enforced by `ruff format`, not the linter.
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "tests"]
