load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

exports_files([
    "packages.yaml",
    "packages.lock.json",
])

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

pkg_tar(
    name = "bazelisk_layer",
    srcs = select({
        "@platforms//cpu:x86_64": ["@bazelisk_amd64//file"],
        "@platforms//cpu:arm64": ["@bazelisk_arm64//file"],
    }),
    mode = "0755",
    mtime = 0,
    package_dir = "/usr/local/bin",
    portable_mtime = False,
)

oci_image(
    name = "image",
    base = "@distroless_base",
    env = {"LANG": "C.UTF-8"},
    tars = [
        "@bookworm//:flat",
        ":bazelisk_layer",
    ],
)

oci_image_index(
    name = "index",
    images = [":image"],
    platforms = [
        ":linux_amd64",
        ":linux_arm64",
    ],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["dazelisk:local"],
)

filegroup(
    name = "image_tarball",
    srcs = [":load"],
    output_group = "tarball",
)

container_structure_test(
    name = "structure_test",
    configs = ["tests/structure.yaml"],
    driver = "tar",
    image = ":image_tarball",
)


oci_push(
    name = "push",
    image = ":index",
    repository = "docker.io/martinopilia/dazelisk",
)
